# cir-monitor

./: .gitignore  README.md  adversarial_agent.py  check_models.py  legal_agent_v2.py  live_test.py  pyproject.toml  smoke.py  stress_test.py
attack/: attack_demo.py  cir_defense.py  malicious_mcp_server.py
cir/: __init__.py  alerts.py  bus.py  cli.py  detectors.py  instrumentation.py  logger.py  models.py  scanner.py
legal_vault/: employment_002.txt  nda_001.txt  partnership_004.txt  service_003.txt
tests/: test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py
tests/fixtures/: clean_tools.json  poisoned_tools.json
